# disirc

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Justfile  LAYOUT.md  LICENSE  README.md  SPECS.md  TODO.md  config.example.toml  deny.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml  docker-test-image.yml  e2e-discord.yml  mutants.yml
hooks/: pre-commit
research/: INDEX.md  discord-dm-api.md  discord-e2e-testing.md  discord-gateway-presences.md  discord-irc-prior-art.md  discord-markdown-parsing.md  inspircd-spanningtree-s2s.md  serenity-0.12-api.md  ts6-s2s-protocol.md  unreal-ircd-s2s-protocol.md  unrealircd-docker-integration-testing.md  unrealircd-ircv3-s2s.md
specs/: 02-irc-connection.md  03-discord-connection.md  05-formatting.md
specs/00-overview/: TODO.md  spec.md
specs/01-configuration/: TODO.md  spec.md
specs/02-irc-connection/: TODO.md  spec.md
specs/03-discord-connection/: TODO.md  spec.md
specs/04-message-bridging/: TODO.md  spec.md
specs/05-formatting/: TODO.md  spec.md
specs/06-pseudoclients/: TODO.md  spec.md
specs/07-irc-message-types/: TODO.md  spec.md
specs/08-e2e-testing/: TODO.md  spec.md
specs/09-dm-bridging/: TODO.md  spec.md
specs/10-state-persistence/: TODO.md  spec.md
specs/11-irc-oper-commands/: TODO.md  spec.md
src/: LAYOUT.md  bridge.rs  config.rs  formatting.rs  irc_message.rs  lib.rs  main.rs  persist.rs  pseudoclients.rs  signal.rs
src/bridge/: mod.rs  orchestrator.rs  relay.rs  routing.rs  state.rs  test_util.rs
src/discord/: connection.rs  handler.rs  mod.rs  send.rs  types.rs
src/formatting/: discord_to_irc.rs  irc_to_discord.rs  mod.rs  test_support.rs
src/irc/: mod.rs  types.rs
src/irc/unreal/: connect.rs  connection.rs  framing.rs  irc_message.rs  mod.rs  rate_limiter.rs  translation.rs
src/irc_connection/: connect.rs  connection.rs  framing.rs  mod.rs  translation.rs  types.rs
tests/: config.rs  e2e_discord.rs  e2e_irc.rs  integration_test.rs
tests/fixtures/: Dockerfile  unrealircd.conf  valid.toml
tests/helpers/: discord_client.rs  irc_client.rs  log_capture.rs  mod.rs
