[package]
name = "disirc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dev-dependencies]
proptest = "1"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
anyhow = "1"
